--- a/css/main.css
+++ b/css/main.css
@@ -198,17 +198,20 @@ img {
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-background-mobile@1x.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-background-mobile@1x.jpg);
-  background-size: contain;
+  background-size: 100%;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-position: center;
   margin: 0 auto;
   margin-bottom: 60px;
   padding: 0;
   width: 100%;
-  height: 400px;
+  max-height: 400px;
   max-width: 480px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-repeat: no-repeat;
 }
 .banner__title {
   font-weight: 900;
@@ -218,9 +221,16 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: white;
-  padding-top: 118px;
-  padding-left: 58px;
-  padding-right: 57px;
+  padding: 118px 0;
+}
+.banner__button {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .button {
@@ -241,10 +251,9 @@ img {
   letter-spacing: 0.06em;
   color: white;
   background-color: #2196f3;
-  padding: 10px 41px;
   width: 200px;
   height: 50px;
-  margin: 30px 140px 118px;
+  padding: 10px 41px;
 }
 .button--modal {
   width: 200px;
@@ -359,12 +368,10 @@ img {
 }
 .lorem__icon {
   width: 70px;
-  height: 70px;
-  padding: 25px 190px;
+  padding: 25px 0;
   background-color: #f5f4fa;
   text-align: center;
   width: 100%;
-  height: 120px;
 }
 .lorem__text {
   font-weight: 400;
