--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -7,15 +7,19 @@
   background-color: $mainheadline-footer-color;
   background-image: linear-gradient($gradient, $gradient),
     url(../images/img-background-mobile@1x.jpg);
-  background-size: contain;
+    background-size: 100%;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-position: center;
   margin: 0 auto;
   margin-bottom: 60px;
   padding: 0;
   width: 100%;
-  height: 400px;
+  max-height: 400px;
   max-width: 480px;
   align-items: center;
-  background-repeat: no-repeat;
+ 
 
   
 
@@ -27,10 +31,14 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $button-text-color;
-    padding-top: 118px;
-    padding-left: 58px;
-    padding-right: 57px;
+    padding: 118px 0;
   
+  }
+
+  &__button {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
   }
 }
 
