--- a/sass/components/_lorem.scss
+++ b/sass/components/_lorem.scss
@@ -9,12 +9,11 @@
 
   &__icon {
     width: 70px;
-    height: 70px;
-    padding: 25px 190px;
+    padding: 25px 0;
     background-color: $alternative-button-background-color;
     text-align: center;
     width: 100%;
-    height: 120px;
+    
   }
 
   &__text {
