--- a/css/main.css
+++ b/css/main.css
@@ -212,6 +212,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 118px 0;
 }
 .banner__title {
   font-weight: 900;
@@ -221,7 +222,6 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: white;
-  padding: 118px 0;
 }
 .banner__button {
   text-align: center;
@@ -883,6 +883,15 @@ input:checked + .checkbox__icon {
 
 .newsletter {
   margin: 0 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 480px;
+  width: 100%;
 }
 .newsletter__form {
   display: -webkit-box;
@@ -898,7 +907,7 @@ input:checked + .checkbox__icon {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0;
+  padding: 0 15;
   gap: 20px;
 }
 .newsletter__mail {
@@ -908,7 +917,8 @@ input:checked + .checkbox__icon {
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
-  width: 358px;
+  width: 100%;
+  max-width: 358px;
   height: 50px;
   padding-left: 16px;
   line-height: 1.25em;
