--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,8 @@ img {
   .header-container {
     padding-top: 32px;
     padding-bottom: 32px;
+    max-width: 768px;
+    width: 100%;
   }
   .header-bottomline {
     min-width: 768px;
@@ -890,7 +892,8 @@ img {
             justify-content: space-between;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    max-width: 100%;
+    max-width: 768px;
+    width: 100%;
     margin: 0 auto;
   }
   .footer__info {
