--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -35,7 +35,8 @@
     align-items: baseline;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 100%;
+    max-width: 768px;
+    width: 100%;
     margin: 0 auto;
   }
 
