--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -19,18 +19,19 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-.header-container {
-  padding-top: 32px;
-  padding-bottom: 32px;
- 
-}
+  .header-container {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    max-width: 768px;
+    width: 100%;
+  }
 
-.header-bottomline {
-  min-width: 768px;
-  margin: 0;
-  border-bottom: 1px solid $headline-bottom-line;
-  width: 100%;
-}
+  .header-bottomline {
+    min-width: 768px;
+    margin: 0;
+    border-bottom: 1px solid $headline-bottom-line;
+    width: 100%;
+  }
 }
 
 // .header-container {
