--- a/css/main.css
+++ b/css/main.css
@@ -1351,10 +1351,10 @@ img {
   position: relative;
   font-weight: 400;
   font-size: 12px;
+  margin: auto;
   margin-top: 20px;
-  margin-left: 50px;
-  margin-right: 40px;
-  margin-bottom: 0;
+  margin-left: 40px;
+  padding-right: 40px;
   max-width: 450px;
   width: 100%;
   color: #757575;
@@ -1362,7 +1362,7 @@ img {
 .checkbox__icon {
   position: absolute;
   fill: white;
-  top: 10%;
+  top: 4%;
   right: 97%;
   border: 1px solid #212121;
 }
@@ -1384,12 +1384,16 @@ input:checked + .checkbox__icon {
   font-size: 12px;
   line-height: 1.5em;
   letter-spacing: 0.03em;
-  margin: 0 auto;
+  margin: auto;
   width: 100%;
+  padding-left: 20px;
+  padding-right: 40px;
 }
 .checkbox__terms--link {
   color: #2196f3;
   text-decoration: underline;
+  margin: auto;
+  width: 100%;
 }
 .checkbox__terms__icon {
   position: absolute;
@@ -1425,6 +1429,7 @@ input:checked + .checkbox__icon {
   }
   .checkbox__terms {
     font-size: 14px;
+    padding: 0;
   }
   .checkbox__icon {
     top: 10%;
