--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -119,10 +119,10 @@
   position: relative;
   font-weight: 400;
   font-size: 12px;
+  margin: auto;
   margin-top: 20px;
-  margin-left: 50px;
-  margin-right: 40px;
-  margin-bottom: 0;
+  margin-left: 40px;
+  padding-right: 40px;
   max-width: 450px;
   width: 100%;
   color: $contactncontent-text-color;
@@ -130,7 +130,7 @@
   &__icon {
     position: absolute;
     fill: $button-text-color;
-    top: 10%;
+    top: 4%;
     right: 97%;
     border: 1px solid $main-text-color;
   }
@@ -153,12 +153,16 @@
   font-size: 12px;
   line-height: 1.5em;
   letter-spacing: 0.03em;
-  margin: 0 auto;
+  margin: auto;
   width: 100%;
+  padding-left: 20px;
+  padding-right: 40px;
 
   &--link {
     color: $button-backgroundnhover-color;
     text-decoration: underline;
+    margin: auto;
+    width: 100%;
   }
 
   &__icon {
@@ -200,6 +204,7 @@
 
     &__terms {
       font-size: 14px;
+      padding: 0;
     }
 
     &__icon {
