--- a/css/main.css
+++ b/css/main.css
@@ -1519,7 +1519,7 @@ input:checked + .checkbox__icon {
   }
 }
 .button-container {
-  margin-left: auto;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1561,6 +1561,7 @@ input:checked + .checkbox__icon {
   left: 0;
   width: 100%;
   height: 100%;
+  margin: auto;
   padding: 40px;
   background-color: white;
   -webkit-transform: translateX(100%);
@@ -1607,10 +1608,14 @@ input:checked + .checkbox__icon {
   display: -ms-flexbox;
   display: flex;
   padding-top: 64px;
+  margin: auto;
+  max-width: 100%;
 }
 
 .mobile-menu__social-item {
   border-right: solid 1px rgba(33, 33, 33, 0.2);
+  margin: auto;
+  max-width: 100%;
   padding: 0 10px;
   font-size: 18px;
   line-height: 1.22;
@@ -1628,6 +1633,7 @@ input:checked + .checkbox__icon {
 
 .mobile-link {
   color: #212121;
+  margin: auto;
   font-weight: 500;
   font-size: 34px;
   line-height: 1.17;
