--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,8 +1,7 @@
 @import "../utils/variables";
 
 .button-container {
-
-  margin-left: auto;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -17,12 +16,11 @@
   }
 }
 
-@media screen and (min-width: 768px)  {
+@media screen and (min-width: 768px) {
   .button-container {
     display: none;
   }
 }
-
 
 .menu-container {
   position: fixed;
@@ -33,6 +31,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  margin: auto;
   padding: 40px;
   background-color: $button-text-color;
   transform: translateX(100%);
@@ -48,7 +47,6 @@
   &:focus {
     fill: $button-backgroundnhover-color;
   }
-
 }
 .menu-container.is-open {
   transform: translateX(0);
@@ -71,9 +69,13 @@
 .mobile-menu__social-list {
   display: flex;
   padding-top: 64px;
+  margin: auto;
+  max-width: 100%;
 }
 .mobile-menu__social-item {
   border-right: solid 1px rgba(33, 33, 33, 0.2);
+  margin: auto;
+  max-width: 100%;
   padding: 0 10px;
   font-size: 18px;
   line-height: 1.22;
@@ -90,6 +92,7 @@
 }
 .mobile-link {
   color: $main-text-color;
+  margin: auto;
   font-weight: 500;
   font-size: 34px;
   line-height: 1.17;
