--- a/css/main.css
+++ b/css/main.css
@@ -1561,7 +1561,7 @@ input:checked + .checkbox__icon {
   width: 100%;
   height: 100%;
   margin: auto;
-  padding: 40px;
+  padding: 15px;
   background-color: white;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -1596,16 +1596,18 @@ input:checked + .checkbox__icon {
 
 .mobile-link,
 .mobile-link--tel,
+.mobile-link--mail,
 .mobile-menu__social-item,
 .mobile-menu__social-item--no-border {
   text-decoration: none;
-  font-size: 40px;
 }
 
 .mobile-menu__social-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 64px;
   margin: auto;
   max-width: 100%;
@@ -1630,22 +1632,32 @@ input:checked + .checkbox__icon {
   color: #2196f3;
 }
 
-.mobile-link {
+.mobile-link,
+.mobile-link--tel,
+.mobile-link--mail {
   color: #212121;
   margin: auto;
+  font-size: 40px;
   font-weight: 500;
-  font-size: 34px;
   line-height: 1.17;
   padding: 10px;
   display: block;
 }
-.mobile-link--tel {
+.mobile-link--tel,
+.mobile-link--tel--tel,
+.mobile-link--mail--tel {
   color: #2196f3;
-  font-weight: 500;
   font-size: 34px;
+  font-weight: 500;
   line-height: 1.17;
   padding: 10px;
   display: block;
+}
+.mobile-link--mail,
+.mobile-link--tel--mail,
+.mobile-link--mail--mail {
+  color: #757575;
+  font-size: 24px;
 }
 
 .mobile-link:hover {
