--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -34,7 +34,7 @@
   width: 100%;
   height: 100%;
   margin: auto;
-  padding: 40px;
+  padding: 15px;
   background-color: $button-text-color;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
@@ -54,6 +54,7 @@
   transform: translateX(0);
 }
 
+
 .mobile-menu-list,
 .mobile-menu-contacts,
 .mobile-menu__social-list {
@@ -63,13 +64,15 @@
 
 .mobile-link,
 .mobile-link--tel,
+.mobile-link--mail,
 .mobile-menu__social-item,
 .mobile-menu__social-item--no-border {
   text-decoration: none;
-  font-size: 40px;
 }
+
 .mobile-menu__social-list {
   display: flex;
+  flex-wrap: wrap;
   padding-top: 64px;
   margin: auto;
   max-width: 100%;
@@ -92,21 +95,27 @@
     color: $button-backgroundnhover-color;
   }
 }
-.mobile-link {
+.mobile-link,
+.mobile-link--tel,
+.mobile-link--mail {
   color: $main-text-color;
   margin: auto;
+  font-size: 40px;
   font-weight: 500;
-  font-size: 34px;
   line-height: 1.17;
   padding: 10px;
   display: block;
   &--tel {
     color: $button-backgroundnhover-color;
-    font-weight: 500;
     font-size: 34px;
+    font-weight: 500;
     line-height: 1.17;
     padding: 10px;
     display: block;
+  }
+  &--mail {
+    color: $contactncontent-text-color;
+    font-size: 24px;
   }
 }
 .mobile-link:hover {
