--- a/css/main.css
+++ b/css/main.css
@@ -1569,6 +1569,7 @@ input:checked + .checkbox__icon {
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+  z-index: 2;
 }
 
 .menu-close {
