--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -38,6 +38,7 @@
   background-color: $button-text-color;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  z-index: 2;
 }
 .menu-close {
   position: absolute;
